--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,2 +1,19 @@
-* {
+@font-face {
+  font-family: 'Pretendard';
+  src: url('/fonts/Pretendard-Regular.otf');
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f2f2f2;
+  height: 100vh;
+}
+
+.content {
+  width: 400px;
+  height: 100vh;
+  background-color: white;
+  margin: 0 auto;
 }
